Added displays for overshoot, rise time, oscillation, steady state error

--- a/css/pid.css
+++ b/css/pid.css
@@ -137,6 +137,10 @@ strong {
     float: left;
 }
 
+#metricsContainer {
+    position: relative;
+    top: 150px;
+}
 
 /* Arrows */
 #actuatorArrow {
