--- a/css/pid.css
+++ b/css/pid.css
@@ -3,6 +3,10 @@ button {
     background-color: orange;
 }
 
+button:active {
+    background-color: #cc6a3d;
+}
+
 /* Sliders, input */
 #ball_weight {
     margin: 5px;
@@ -29,6 +33,33 @@ input {
     left: 0;
 }
 
+#customEquationPopup {
+    position: absolute;
+    background-color: white;
+    border: 3px solid gray;
+    width: 350px;
+    height: 400px;
+    top: 0;
+    z-index: 10;
+}
+
+#customEquationField {
+    position: relative;
+    width: 100%;
+    height: 90%;
+}
+
+#openCustom {
+    position: relative;
+    top: 50px;
+    z-index: 0;
+}
+
+#closeCustom {
+    float: right;
+    display: block;
+}
+
 /* HTML elements */
 
 body {
@@ -43,7 +74,7 @@ body {
     padding:10px;
 }
 
-#mode {
+#pidMode {
     width: 155px;
     border:solid;
 }
